fix overflow make projects scroll

--- a/index.scss
+++ b/index.scss
@@ -13,6 +13,14 @@ $color2: rgba(70, 129, 137, 1);
 $color3: rgba(119, 172, 162, 1);
 $color4: rgba(157, 190, 187, 1);
 $color5: rgba(244, 233, 205, 1);
+ 
+html{
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+}
+body::-webkit-scrollbar { 
+    display: none; 
+}
 
 #page{
     background: $color5;
@@ -32,6 +40,10 @@ $color5: rgba(244, 233, 205, 1);
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    a{
+        color: inherit;
+        text-decoration: none;
+    }
     #nav-links{
         display: flex;
         flex-direction: row;
@@ -53,16 +65,16 @@ $color5: rgba(244, 233, 205, 1);
     }
     #hello{
         margin-left: auto;
-        
         background: $color5;
         // margin-top: 10vh;
-        float:right;
+        // float:right;
         // top: calc(max(70vh - 70px -(100vw * .35),70px));
-        transform: translateX(-15%);
-        position: relative;
+        // transform: translateX(-100%);
+        position: absolute;
+        right: 20%;
         text-align: right;
         margin-top: 10vw;
-        z-index: -1;
+        z-index: 2;
         @media only screen and(max-width: 840px){
             // top: calc(70vh - 70px - (840px*.35));
             // margin-top: 0;
@@ -81,34 +93,47 @@ $color5: rgba(244, 233, 205, 1);
         padding-top: 0;
        }
     }
+    .clear{
+        clear: both;
+    }
     .background-container{
-        // top: calc(max(70vh - 70px -(100vw * .35),70px));
-        transform: translateX(-15%);
+        top: calc(max(70vh - 70px -(100vw * .35),70px));
         position: relative;
         height: calc(100vw * .35866);
         width: 100vw;
-        z-index: -1;
+        z-index: -2;
+        overflow: hidden;
+        // float: left;
+        
+        transform: translateY(1px) translateX(-15%);
         @media only screen and(max-width: 840px){
             // top: calc(70vh - 70px - (840px*.35));
+            height: calc(840px * .35);
         }
-        overflow: hidden;
+        
     }
     .background{
         position: absolute;
         left: 0;
+        // bottom: 0;
         width: 100vw;
         min-width: 840px;
-        z-index: -1;
+        z-index: -2;
+        // overflow: hidden;
         // transform: translateX(-20%);
     }
+}
+#blurb-scroll{
+    display: block;
+    transform: translateY(calc(-100vw / 15));
 }
 #blurb{
     background: $color1;
     // border-top: solid;
     border-top-color: $color1;
     border-top-style: solid;
-    border-width: 1px;
-    transform: translateY(-1px);
+    // border-width: 1px;
+    // transform: translateY(-1px);
     
     h4{
         padding: 20px;
@@ -120,24 +145,36 @@ $color5: rgba(244, 233, 205, 1);
         font-family: 'Raleway', sans-serif;
     }
 }
+#projects-scroll{
+    display:block;
+    transform: translateY(-70px);
+}
+#projects::-webkit-scrollbar { 
+    display: none; 
+}
 #projects{
     h1{
         padding-top: 20px;
         text-align: center;
     }
     .projects{
-        display: grid;
-        grid-template-columns: auto auto;
-        @media only screen and(max-width: 1000px){
-            grid-template-columns: auto;
-            grid-template-rows: auto auto auto auto;
+        display: flex;
+        scrollbar-width: none;
+        flex-direction: row;
+        overflow-x: scroll;
+        // margin-top: 75px;
+        width: 100vw;
+        transform: translateX(-15%);
+        .spacer{
+            background-color: none;
+            min-width: 15%;
         }
-        margin-top: 75px;
-        grid-gap: 50px 100px;
         .grid-item{
-            display: inline-grid;
-            margin: 20px;
-            min-width: 300px;
+            display: block;
+            margin: 10%;
+            min-width: 50%;
+            margin-top: 75px;
+            margin-bottom: 75px;
             // min-height: 400px;
             background-color: $color3;
             border-left: 10px solid $color2;
@@ -154,8 +191,10 @@ $color5: rgba(244, 233, 205, 1);
                 .desc{
                     position: relative;
                     top: 0;
+                    font-size: .75em;
                     margin-left: 75px;
                     margin-right: 50px;
+                    font-family: 'Raleway', sans-serif;
                     transform: translateY(-75px);
                 }
                 .icon{
